package ir.ac.kntu.model.Towers;

/**
 * @author TOP
 */
public class BlackTower extends Tower {

    /**
     *
     */
    public BlackTower() {
        super(2000, 300, 40, 2);
    }
}