package ir.ac.kntu.model.Towers;

/**
 * @author TOP
 */
public class ElectricTower extends Tower {

    /**
     *
     */
    public ElectricTower() {
        super(1500, 250, 45, 3);
    }
}