package ir.ac.kntu.model.Towers;

/**
 * @author TOP
 */
public class InfernoTower extends Tower {

    /**
     *
     */
    public InfernoTower() {
        super(1000, 280, 40, 3);
    }
}