package ir.ac.kntu.model.Towers;

/**
 * @author TOP
 */
public class SoldierTower extends Tower {

    /**
     *
     */
    public SoldierTower() {
        super(500);
    }
}
