@startuml

title __TOWERS's Class Diagram__\n

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Towers {
      class BlackTower {
          + BlackTower()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Towers {
      class ElectricTower {
          + ElectricTower()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Towers {
      class InfernoTower {
          + InfernoTower()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Towers {
      class SoldierTower {
          + SoldierTower()
      }
    }
  }
  

  package ir.ac.kntu.model {
    package ir.ac.kntu.model.Towers {
      class Tower {
          {static} - serialVersionUID : long
          - cost : int
          - damage : int
          - range : int
          - health : int
          - isActive : boolean
          - location : Pair<Integer, Integer>
          + Tower()
          + Tower()
          {static} + getSymbol()
          + getCost()
          + getDamage()
          + getRange()
          + toString()
          + getLocation()
          + setLocation()
          + isActive()
          - setActive()
          + getHealth()
          + setHealth()
      }
    }
  }
  

  BlackTower -up-|> Tower
  ElectricTower -up-|> Tower
  InfernoTower -up-|> Tower
  SoldierTower -up-|> Tower
  Tower -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
